--- a/src/app/private/components/collections-list/collections-list.component.html
+++ b/src/app/private/components/collections-list/collections-list.component.html
@@ -3,7 +3,7 @@
 <div class="container">
   <div class="float-right">
     <button type="button" class="btn btn-primary" [routerLink]="['novo']">
-      Nova Coleção
+      Criar Coleção
     </button>
   </div>
   <table class="table table-hover">
@@ -22,7 +22,7 @@
       >
         <td>{{ collectionList.id }}</td>
         <td>{{ collectionList.colecao }}</td>
-        <td>{{ collectionList.estacao + collectionList.ano }}</td>
+        <td>{{ collectionList.estacao + " " + collectionList.ano }}</td>
         <td>{{ collectionList.responsavel }}</td>
       </tr>
     </tbody>
