estruturando o public module

--- a/src/app/private/components/side-bar/side-bar.component.html
+++ b/src/app/private/components/side-bar/side-bar.component.html
@@ -30,6 +30,6 @@
       <li class="item">Enviar Comentários</li>
     </ul>
   </div>
-  <div class="item external logout">Logout</div>
+  <div class="item external logout" [routerLink]="['/']">Logout</div>
 </div>
 <!-- </div> -->
