--- a/src/app/public/components/password-recover/password-recover.component.html
+++ b/src/app/public/components/password-recover/password-recover.component.html
@@ -1,1 +1,29 @@
-<p>password-recover works!</p>
+<div class="background">
+  <div class="container">
+    <img src="../../../../assets/images/Fill-51.png" alt="Logo da Audaces" />
+
+    <div class="login__box">
+      <div class="login__box--header">
+        <button class="back-btn" [routerLink]="['/']">Voltar</button>
+        <h1 class="header__title">Redefinir Senha</h1>
+
+        <p class="header__subTitle">
+          Digite o e-mail associado à sua conta e enviaremos instruções para
+          redefinir sua senha.
+        </p>
+      </div>
+
+      <form class="login__box--form">
+        <input
+          class="form__input"
+          type="text"
+          placeholder="Informe seu e-mail"
+        />
+
+        <button class="form__btn" [routerLink]="['../user']">
+          Enviar Recuperação
+        </button>
+      </form>
+    </div>
+  </div>
+</div>
