--- a/src/app/private/components/side-bar/side-bar.component.html
+++ b/src/app/private/components/side-bar/side-bar.component.html
@@ -1,14 +1,9 @@
-<!-- <div class="container"> -->
 <div class="side-menu">
   <div class="logo">
     <img src="../../../../assets/images/isa 1.png" alt="" />
     <p>AudacesManager</p>
   </div>
-  <div
-    class="item external"
-    [routerLink]="['dashboard']"
-    routerLinkActive="selected"
-  >
+  <div class="item" [routerLink]="['dashboard']" routerLinkActive="selected">
     Dashboard
   </div>
   <div class="cadastros">
@@ -32,4 +27,3 @@
   </div>
   <div class="item external logout" [routerLink]="['/']">Logout</div>
 </div>
-<!-- </div> -->
