--- a/src/app/public/components/password-recover/password-recover.component.scss
+++ b/src/app/public/components/password-recover/password-recover.component.scss
@@ -1,16 +1,3 @@
-.background {
-  background-color: #f2f5ff;
-  height: 100%;
-}
-
-.container {
-  margin: auto;
-  width: 100%;
-  height: 100%;
-  row-gap: 2rem;
-}
-
-.container,
 .login__box,
 .login__box--header,
 .login__box--form {
@@ -25,6 +12,23 @@
   padding: 2rem 4rem;
   border-radius: 0.5rem;
   row-gap: 2rem;
+}
+.header-row {
+  width: 100%;
+  height: 100%;
+  display: flex;
+
+  column-gap: 4rem;
+  // justify-content: space-between;
+}
+.back-btn {
+  padding-top: 0.3rem;
+  align-items: center;
+  border: none;
+  background-color: none;
+  img {
+    align-self: center;
+  }
 }
 .header__title {
   color: #2c2c2c;
