--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,11 +7,34 @@ body {
 body {
   margin: 0;
   font-family: "Inter", sans-serif;
-
   color: #6a7090;
+}
+h1 {
+  color: #2c2c2c;
+  font-weight: 600;
+}
+input {
+  width: 25rem;
+  height: 3rem;
+  border: none;
+  border-radius: 0.5rem;
+  padding: 1rem;
+  outline: 1px solid #d6dae0;
+}
+input::placeholder {
+  color: #b4b6c1;
+}
+input:focus {
+  outline: 2px solid #5874df;
 }
 button {
   background-color: #0073cf;
+  color: #fbf4f4;
+  border: none;
+  border-radius: 0.5rem;
+  font-weight: 600;
+  width: 15rem;
+  height: 3rem;
 }
 button:hover {
   background-color: #015ca7;
