--- a/src/app/private/components/collections-list/collections-list.component.html
+++ b/src/app/private/components/collections-list/collections-list.component.html
@@ -1,17 +1,14 @@
-<h1 class="float-left">Coleções</h1>
-
 <div class="container">
-  <div class="float-right">
-    <button type="button" class="btn btn-primary" [routerLink]="['novo']">
-      Criar Coleção
-    </button>
+  <div class="header">
+    <h1 class="title">Coleções</h1>
+    <button type="button" [routerLink]="['novo']">Criar Coleção</button>
   </div>
-  <table class="table table-hover">
+  <table>
     <thead>
       <tr>
-        <th>#</th>
+        <th>ID</th>
         <th>Coleção</th>
-        <th>Lançamento</th>
+        <th>Estação e Lançamento</th>
         <th>Responsável</th>
       </tr>
     </thead>
