--- a/src/app/private/components/models-list/models-list.component.html
+++ b/src/app/private/components/models-list/models-list.component.html
@@ -1,12 +1,9 @@
-<h1 class="float-left">Modelos</h1>
-
 <div class="container">
-  <div class="float-right">
-    <button type="button" class="btn btn-primary" [routerLink]="['novo']">
-      Criar Modelo
-    </button>
+  <div class="header">
+    <h1 class="title">Modelos</h1>
+    <button type="button" [routerLink]="['novo']">Criar Modelo</button>
   </div>
-  <table class="table table-hover">
+  <table>
     <thead>
       <tr>
         <th>ModeloID</th>
