--- a/src/app/public/components/login/login.component.scss
+++ b/src/app/public/components/login/login.component.scss
@@ -1,15 +1,3 @@
-.background {
-  background-color: #f2f5ff;
-  height: 100%;
-}
-
-.container {
-  margin: auto;
-  width: 100%;
-  height: 100%;
-  row-gap: 2rem;
-}
-
 .container,
 .login__box,
 .login__box--header,
@@ -49,7 +37,6 @@
   padding: 1rem;
   border: none;
   outline: 1px solid #ebf0fa;
-  height: 45px;
 }
 .form__input:focus {
   outline: 2px solid #5874df;
@@ -70,6 +57,7 @@
   flex-direction: row;
   column-gap: 5px;
   font-weight: 500;
+  margin-top: 2rem;
   p {
     color: #989898;
   }
@@ -77,4 +65,7 @@
     cursor: pointer;
     color: #5874df;
   }
+}
+.ng-invalid:not(form).ng-touched {
+  outline: 3px solid red;
 }
