--- a/src/app/public/layout/content/content.component.html
+++ b/src/app/public/layout/content/content.component.html
@@ -1,3 +1,6 @@
-<div class="page-wrapper">
-  <router-outlet></router-outlet>
+<div class="bg">
+  <div class="container">
+    <img src="../../../../assets/images/Fill-51.png" alt="Logo da Audaces" />
+    <router-outlet></router-outlet>
+  </div>
 </div>
