Adicionando a função onRefresh

--- a/src/app/private/components/collections-form/collections-form.component.html
+++ b/src/app/private/components/collections-form/collections-form.component.html
@@ -1,8 +1,8 @@
-<div class="container">
+<section class="container">
   <h1 *ngIf="form.value.id === null">Criar Coleção</h1>
   <h1 *ngIf="form.value.id">Editar {{ form.value.colecao }}</h1>
   <form [formGroup]="form">
-    <div class="row">
+    <section class="row">
       <div class="col">
         <input
           formControlName="colecao"
@@ -19,9 +19,9 @@
           aria-label="Responsável pela coleção"
         />
       </div>
-    </div>
+    </section>
 
-    <div class="row">
+    <section class="row">
       <div class="col">
         <input
           formControlName="estacao"
@@ -38,8 +38,8 @@
           aria-label="Para qual marca você está criando?"
         />
       </div>
-    </div>
-    <div class="row">
+    </section>
+    <section class="row">
       <div class="col">
         <input
           formControlName="orcamento"
@@ -56,80 +56,12 @@
           aria-label="Ano de Lançamento"
         />
       </div>
-    </div>
+    </section>
   </form>
   <img src="../../../../assets/images/image 1.png" />
-  <div class="buttons">
+  <section class="buttons">
     <button class="cancel" type="submit" (click)="onCancel()">Cancelar</button>
 
     <button type="submit" (click)="onSubmit()">Salvar</button>
-  </div>
-</div>
-<!-- <form [formGroup]="form">
-  <div class="row g-3">
-    <div class="col">
-      <input
-        formControlName="colecao"
-        type="text"
-        class="form-control"
-        placeholder="Nome da Coleção"
-        aria-label="Nome da Coleção"
-      />
-    </div>
-    <div class="col">
-      <input
-        formControlName="responsavel"
-        type="text"
-        class="form-control"
-        placeholder="Responsável pela coleção"
-        aria-label="Responsável pela coleção"
-      />
-    </div>
-  </div>
-  <div class="row g-3">
-    <div class="col">
-      <input
-        formControlName="estacao"
-        type="text"
-        class="form-control"
-        placeholder="Para qual Estação?"
-        aria-label="Para qual Estação?"
-      />
-    </div>
-    <div class="col">
-      <input
-        formControlName="marca"
-        type="text"
-        class="form-control"
-        placeholder="Para qual marca você está criando?"
-        aria-label="Para qual marca você está criando?"
-      />
-    </div>
-  </div>
-  <div class="row g-3">
-    <div class="col">
-      <input
-        formControlName="orcamento"
-        type="number"
-        class="form-control"
-        placeholder="Qual o orçamento desta coleção"
-        aria-label="Qual o orçamento desta coleção"
-      />
-    </div>
-    <div class="col">
-      <input
-        formControlName="ano"
-        type="number"
-        class="form-control"
-        placeholder="Ano de Lançamento"
-        aria-label="Ano de Lançamento"
-      />
-    </div>
-  </div>
-  <div class="col-12">
-    <button type="submit" class="btn" (click)="onCancel()">Cancelar</button>
-    <button type="submit" class="btn btn-primary" (click)="onSubmit()">
-      Salvar
-    </button>
-  </div>
-</form> -->
+  </section>
+</section>
